# Axiom

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  _smoke_bundle.pt  _smoke_bundle_topology.json  _smoke_predict.axb  benchmark_symbolic_snapshot.json  best_double_x.ax  best_double_x_v4.ax  best_risk_score.ax  best_risk_score_v3.ax  best_small_v2.ax  ci_baseline.json  constraints-dev.txt  docker-compose.yml  loop.ax  main.py  pipeline_double_x_v2.json  pipeline_double_x_v4.json  pipeline_risk_score.json  pipeline_risk_score_v2.json  pipeline_risk_score_v4.json  pipeline_risk_score_v5.json  pipeline_risk_score_v6.json  pipeline_risk_score_v7.json  pipeline_risk_score_v8.json  pipeline_risk_score_v9.json  pipeline_small.json  plan.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  showcase_backend_only_quadratic_with_cross_term.ax  showcase_benchmark_failures_minmax_blend.ax  showcase_double_x.ax  showcase_double_x.json  showcase_risk_score.json  (+2 more)
benchmarks/: copilot_symbolic_and_generalization_tasks.json  copilot_symbolic_generalization_stress_tasks.json  copilot_symbolic_next_milestone_tasks.json  copilot_symbolic_robustness_ambiguity_stress_tasks.json
compiler/: __init__.py  deserializer.py  flow.py  grammar.lark  ir.py  serializer.py
copilot_run_double_x_v2/: best.ax  iterations.json  search_report.json
copilot_run_double_x_v4/: iterations.json  search_report.json
copilot_run_risk_score/: iterations.json  search_report.json
copilot_run_risk_score_v2/: best.ax  iterations.json  search_report.json
copilot_run_risk_score_v4/: iterations.json  search_report.json
copilot_run_risk_score_v5/: best.ax  iterations.json  search_report.json
copilot_run_risk_score_v6/: iterations.json  search_report.json
copilot_run_small/: best.ax  iterations.json  search_report.json
copilot_trace_double_x/: iterations.json  search_report.json
copilot_trace_double_x_v2/: best.ax  iterations.json  search_report.json
copilot_trace_double_x_v3/: best.ax  iterations.json  search_report.json
copilot_trace_double_x_v4/: iterations.json  search_report.json
copilot_trace_risk_score/: iterations.json  search_report.json
copilot_trace_risk_score_v2/: best.ax  iterations.json  search_report.json
copilot_trace_risk_score_v3/: iterations.json  search_report.json
copilot_trace_risk_score_v4/: iterations.json  search_report.json
copilot_trace_risk_score_v5/: iterations.json  search_report.json
copilot_trace_small/: best.ax  iterations.json  search_report.json
copilot_trace_small_v2/: iterations.json  search_report.json
debug_backend_only_max_of_two/: best.ax  iterations.json  search_report.json  search_report_cli.json
debug_backend_only_minmax_blend/: iterations.json  search_report.json  search_report_cli.json
debug_backend_only_nested_piecewise/: best.ax  iterations.json  search_report.json  search_report_cli.json
debug_backend_only_quadratic/: best.ax  search_report_cli.json
debug_backend_only_quadratic_with_cross_term/: best.ax  iterations.json  search_report.json  search_report_cli.json
debug_backend_only_three_way_maxmin/: best.ax  iterations.json  search_report.json  search_report_cli.json
debug_benchmark_failures_minmax_blend/: iterations.json  search_report.json  search_report_cli.json
debug_benchmark_failures_three_input_affine/: search_report.json
debug_double_x/: report.json  search_report_cli.json
debug_piecewise_threshold/: search_report.json  search_report_cli.json
debug_risk_score/: best.ax  report.json  search_report.json  search_report_cli.json
debug_three_input_affine/: search_report.json  search_report_cli.json
engine/: __init__.py  block_executor.py  dataloader.py  fitness.py  inference.py  interpreter.py  loop_executor.py  router.py  (+6 more)
(+369 files in other folders)
