[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-engine"
version = "1.1.0"
description = "Hybrid symbolic–neural execution graph compiler and trainer"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "lark>=1.1.0",
    "networkx>=3.0",
]

[project.scripts]
axiom = "axiom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
axiom = ["compiler/*.lark", "copilot/fixtures/*.json"]

[project.optional-dependencies]
spy = ["pandas>=2.0", "yfinance>=0.2.36"]
cartpole = ["gymnasium>=0.29.0"]
# Glass Box (`axiom inspect`) + Copilot Studio (`axiom copilot-studio`): Streamlit + graphviz (system `dot` optional at runtime)
inspect = ["streamlit>=1.28.0", "graphviz>=0.20.0"]
# Policy UI examples + HTTP; overlaps with [serve] on FastAPI — install `[gateway]` for the full stack
gateway = ["requests>=2.28.0", "streamlit>=1.28.0", "fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]
serve = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]
lock = ["cryptography>=42.0.0"]
export = ["onnx>=1.16.0"]
# Onyx/Qwen OpenAI-style chat expert (``axiom.experts.onyx_qwen``)
copilot = ["requests>=2.28.0"]
dev = ["pytest>=7.0.0", "streamlit>=1.28.0", "graphviz>=0.20.0"]
